@@ -1,0 +1,8 @@
+class Category
+  include Mongoid::Document
+  include Mongoid::Voteable
+
+  field :name  
+
+  has_and_belongs_to_many :posts
+end
